<resources>
    <string name="app_name">Reciplease</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>

    <string name="reciplease">Reciplease</string>
    <string name="fridge_label">What\'s in your fridge ?</string>
    <string name="ingredient_placeholder">Lemon, Cheese, Sausages...</string>
    <string name="add">Add</string>
    <string name="search_recipes">Search for recipes</string>
    <string name="your_ingredients">Your ingredients :</string>
    <string name="clear">Clear</string>
    <string name="directions">Get Directions</string>
    <string name="ingredients">Ingredients :</string>
    <string name="recipe_added">"Recipe added to your favorites list"</string>
    <string name="recipe_deleted">"This recipe has been removed from favorites"</string>

</resources>
