<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.tab.search.ingredients.SearchFragment" android:background="@color/recipleaseBackground"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/selection_layout"
                android:background="@android:color/white" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent">
            <TextView
                    android:text="@string/fridge_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView" android:gravity="center"
                    android:textSize="24sp" app:fontFamily="casual" android:textStyle="bold"
                    android:layout_marginTop="10dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp">
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/ingredient_input" android:layout_weight="1" android:textStyle="italic"
                        android:textColor="@android:color/darker_gray" android:textSize="18sp"
                        android:lineSpacingExtra="8sp" android:textColorLink="@android:color/white"
                        android:backgroundTint="@android:color/darker_gray"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:hint="@string/ingredient_placeholder"
                        android:layout_marginBottom="10dp" android:selectAllOnFocus="false"
                        android:singleLine="false"/>
                <Button
                        android:text="@string/add"
                        android:layout_width="wrap_content"
                        android:id="@+id/add_button" android:layout_weight="1"
                        android:textSize="14sp" android:textColor="@android:color/white"
                        android:background="@drawable/rounded_shape"
                        android:layout_height="30dp"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
                android:text="@string/your_ingredients"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ingredients_label" app:fontFamily="casual"
                android:layout_marginTop="18dp" app:layout_constraintTop_toBottomOf="@+id/selection_layout"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"/>
        <Button
                android:text="@string/clear"
                android:layout_width="wrap_content"
                android:id="@+id/clear_button" android:layout_weight="1"
                android:textSize="14sp" android:textColor="@android:color/white"
                android:background="@drawable/rounded_shape_gray"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@+id/selection_layout"/>
        <Button
                android:text="@string/search_recipes"
                android:layout_height="wrap_content"
                android:id="@+id/direction_button"
                android:background="@drawable/rounded_shape" android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="30dp" android:layout_marginStart="30dp" android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_width="0dp"/>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/direction_button" android:id="@+id/ingredients_list"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/ingredients_label"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>