<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:id="@+id/main_content"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context=".ui.main.MainActivity"
                                                 android:background="@color/recipleaseBackground">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay" android:background="@color/recipleaseBackground">

        <TextView
                android:text="@string/reciplease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/title_view" android:layout_weight="1"
                android:textColor="@android:color/white" android:background="@color/recipleaseBackground"
                android:textSize="30sp" app:fontFamily="casual" android:gravity="center_horizontal"
                android:textStyle="bold"/>
        <android.support.design.widget.TabLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/tabs"
                android:background="@color/recipleaseBackground" app:tabIndicatorColor="@color/recipleaseBackground">

            <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"/>

            <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites"/>

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
            android:id="@+id/recipes_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


</android.support.design.widget.CoordinatorLayout>